--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,3 +1,7 @@
+[prune]
+  go-tests = true
+  unused-packages = true
+
 [[constraint]]
   branch = "master"
   name = "github.com/hashicorp/terraform"
