--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
 language: go
 go:
   - "1.11.x"
+env:
+  - GOFLAGS=-mod=vendor GO111MODULE=on
 
 install:
 # This script is used by the Travis build to install a cookie for
@@ -12,11 +14,9 @@ install:
 # packages that live there.
 # See: https://github.com/golang/go/issues/12933
 - bash scripts/gogetcookie.sh
-- go get github.com/kardianos/govendor
 
 script:
 - make test
-- make vendor-status
 - make vet
 - make website-test
 
