--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ services:
   - docker
 language: go
 go:
-  - "1.11.x"
+  - "1.12.x"
 env:
-  - GOFLAGS=-mod=vendor GO111MODULE=on
+  - GOFLAGS=-mod=vendor
 
 install:
 # This script is used by the Travis build to install a cookie for
