--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
-      - run: make test
+      - run: make tools pebble-start-install test
 
