--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.15.5'
       - run: make tools pebble-start-install test
 
