--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: /home/runner/go/mod
-          key: go-mod-cache-${{ hashFiles('go.mod') }}
+          key: go-mod-cache-${{ hashFiles('go.sum') }}
           restore-keys: |
             go-mod-cache-
       - run: go mod verify
