--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
           go-version: '^1.15.5'
       - uses: actions/cache@v2
         with:
-          path: /home/runner/go/mod
+          path: /home/runner/go/pkg/mod
           key: go-mod-cache-${{ hashFiles('go.sum') }}
           restore-keys: |
             go-mod-cache-
