--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,13 @@
 name: test
 on:
   push:
-    branches: '*/**'
+    branches:
+      - '**'
     tags-ignore:
       - 'v*'
+  pull_request:
+    branches:
+      - '**'
 jobs:
   test:
     runs-on: ubuntu-latest
