--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.15.8'
+          go-version: '^1.16$'
       - name: Cache (Go Modules)
         uses: actions/cache@v2.1.4
         env:
@@ -63,7 +63,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1.15.8'
+          go-version: '^1.16$'
       - name: Cache (Go Modules)
         uses: actions/cache@v2.1.4
         env:
