r/certificate: add HTTP and TLS challenges

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Verify Modules
         run: go mod verify
       - name: Run Tests
-        run: make tools pebble-start test
+        run: make tools pebble-start memcached-start test
 
   goreleaser:
     needs: test
