--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,6 +28,8 @@ builds:
   ignore:
     - goos: darwin
       goarch: '386'
+    - goos: freebsd
+      goarch: 'arm_6'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
 - format: zip
