--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,7 +29,7 @@ builds:
     - goos: darwin
       goarch: '386'
     - goos: freebsd
-      goarch: 'arm_6'
+      goarch: 'arm'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
 - format: zip
