Try stringified output instead

--- a/.github/workflows/provider-generate.yml
+++ b/.github/workflows/provider-generate.yml
@@ -24,10 +24,16 @@ jobs:
         with:
           fetch-depth: 0
       - id: should_skip
-        run: git diff origin/${{ github.base_ref }} | grep -q github.com/go-acme/lego; echo "$?" >> $GITHUB_OUTPUT
+        run: |
+          git diff origin/${{ github.base_ref }} | grep -q github.com/go-acme/lego
+          if [ "$?" -eq "0" ]; then
+            echo -n "false" >> $GITHUB_OUTPUT
+          else
+            echo -n "true" >> $GITHUB_OUTPUT
+          fi
   generate:
     needs: skip_lego_not_changed
-    if: needs.skip_check.outputs.should_skip == '0'
+    if: needs.skip_check.outputs.should_skip == 'false'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
