--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '^1.17.5'
+          check-latest: true
       - name: Cache (Go Modules)
         uses: actions/cache@v3
         env:
@@ -64,6 +65,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '^1.17.5'
+          check-latest: true
       - name: Cache (Go Modules)
         uses: actions/cache@v3
         env:
