--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v4.4.0
         with:
           version: latest
-          args: release --rm-dist
+          args: release --clean --timeout 60m0s
         env:
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
