workflows: add memcache test env var

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,8 @@ jobs:
         run: go mod verify
       - name: Run Tests
         run: make tools pebble-start memcached-start test
+        env:
+          ACME_ENABLE_MEMCACHE_TEST: yes
 
   goreleaser:
     needs: test
