goreleaser: drop windows/arm from build list
Looks like this was dropped in Go 1.26.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,6 +31,8 @@ builds:
       goarch: '386'
     - goos: freebsd
       goarch: 'arm'
+    - goos: windows
+      goarch: 'arm'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
 - format: zip
